changed phone layout issues!

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
     background-size: 20px 20px;
 }
 
+/* navigation bar stuff! */ 
 .navigation_bar { 
     display: flex; 
     margin-top: 10px; 
@@ -40,51 +41,58 @@ body {
     color: #2c2a29;
 }
 
+/* title section!! */
+
 .title_section { 
     display: flex; 
     padding: 10px;
     align-items: center;
-    margin: 0px 30px;
-    max-height: 100px;
+    margin: 5px 30px;
+    /*max-height: 100px;*/
     flex-grow: 0;
 }
 
 h1 { 
     font-weight: 700; 
-    font-size: 96px;
+    font-size: clamp(12px, 12vw, 96px);
     margin-left: 26px;
+    text-shadow: 3px 3px 5px darkgray;
+    line-height: 1.1;
 }
 
 .logo { 
     flex-grow: 0; 
-    width: 200px; 
+    width: clamp(50px, 20vw,200px); 
     height: auto;
 }
 
+/* Introduction section! */ 
+
 .introduction_section { 
     display: flex; 
+    flex-direction: row; 
     flex-grow: 0;
-    margin: 30px;
-    margin-top: 160px;
+    margin: clamp(3px, 5vw,30px);
+    margin-top: 2vw;
     gap: 46px;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
 }
 
 .intro_paragraph { 
     font-weight: 300; 
     font-size: 20px;
-    margin-left: 36px; 
-    max-width: 60%; 
+    margin-left: clamp(6px, 5vw, 10px); 
+    max-width: 86%; 
     text-align: justify;
 }
 
 .intro_image { 
-    width: 80%; 
-    max-width: 450px;
+    width: clamp(400px, 40vw, 700px); 
     height: auto;
 }
+
+/* Card section! */ 
 
 .card_section { 
     display: flex; 
@@ -127,3 +135,15 @@ footer {
     padding: 0px;
 }
 
+
+/* Phone media queries? */
+@media(max-width: 700px) { 
+  .title_section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .introduction_section { 
+    flex-direction: column; 
+  }
+}
